WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274713
[WebGPU] Auto layout incorrectly allows mismatched bindings
https://bugs.webkit.org/show_bug.cgi?id=274713
Summary
[WebGPU] Auto layout incorrectly allows mismatched bindings
Mike Wyrzykowski
Reported
2024-05-25 10:02:36 PDT
[WebGPU] Auto layout incorrectly allows mismatched bindings
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-05-25 10:02:50 PDT
radar://128681978
Mike Wyrzykowski
Comment 2
2024-05-25 10:11:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29113
EWS
Comment 3
2024-05-28 16:42:24 PDT
Committed
279415@main
(1560bc9c8d3f): <
https://commits.webkit.org/279415@main
> Reviewed commits have been landed. Closing PR #29113 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug