[WebGPU] Auto layout incorrectly allows mismatched bindings https://bugs.webkit.org/show_bug.cgi?id=274713 <radar://128681978>

Reviewed by Tadeu Zagallo.

Validate that mismatched bindings between fragment and vertex programs results
in a validation error.

* LayoutTests/fast/webgpu/regression/repro_274713-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_274713.html: Added.
* LayoutTests/fast/webgpu/regression/repro_274713b-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_274713b.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/BindGroupLayout.h:
* Source/WebGPU/WebGPU/BindGroupLayout.mm:
(WebGPU::BindGroupLayout::equalBindingEntries):
(WebGPU::equalEntries):
(WebGPU::equalBindingEntries): Deleted.
* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::makeBindingLayout):
(WebGPU::toBindingLayout):
(WebGPU::Device::addPipelineLayouts):

Canonical link: https://commits.webkit.org/279415@main